# SDL2Duell

./: CMakeLists.txt  Duell.cpp  Duell.h  Globals.h  Makefile.win  Player.cpp  Player.h  SDLDuell.dev  SDLDuell_private.h  SDLDuell_private.rc  SDLDuell_private.res  Sprite.cpp  Sprite.h  Utils.cpp  Utils.h
VS19/: SDLDuell.cpp  SDLDuell.sln  SDLDuell.vcxproj  SDLDuell.vcxproj.filters
